--- a/src/chainConfig.json
+++ b/src/chainConfig.json
@@ -1,18 +1,181 @@
 {
+  "AVAX": {
+    "nodeUrlArray": [
+      "https://api.avax.network/ext/bc/C/rpc",
+      "https://rpc.ankr.com/avalanche",
+      "https://blastapi.io/public-api/avalanche",
+      "https://avalanche-c-chain.publicnode.com",
+      "https://avax.meowrpc.com",
+      "https://1rpc.io/avax/c",
+      "https://avalanche.drpc.org",
+      "https://avax.meowrpc.com",
+      "https://avalanche.public-rpc.com"
+    ],
+    "contractAddress": "0x74e121a34a66d54c33f3291f2cdf26b1cd037c3a"
+  },
+  "ARB": {
+    "nodeUrlArray": [
+      "https://arb1.arbitrum.io/rpc",
+      "https://rpc.ankr.com/arbitrum",
+      "https://1rpc.io/arb",
+      "https://arbitrum-one.publicnode.com",
+      "https://arbitrum-one.public.blastapi.io",
+      "https://arbitrum.meowrpc.com",
+      "https://arbitrum.drpc.org"
+
+    ],
+    "contractAddress": "0xf7ba155556e2cd4dfe3fe26e506a14d2f4b97613"
+  },
+  "BSC": {
+    "nodeUrlArray": [
+      "https://bsc-rpc.gateway.pokt.network",
+      "https://binance.llamarpc.com",
+      "https://bsc-dataseed1.binance.org",
+      "https://rpc.ankr.com/bsc",
+      "https://1rpc.io/bnb",
+      "https://bsc.publicnode.com",
+      "https://bsc.drpc.org",
+      "https://bsc.meowrpc.com"
+    ],
+    "contractAddress": "0xc3711bdbe7e3063bf6c22e7fed42f782ac82baee"
+  },
   "ETH": {
     "nodeUrlArray": [
+      "https://ethereum.publicnode.com",
       "https://rpc.ankr.com/eth",
-      "https://endpoints.omniatech.io/v1/eth/mainnet/public",
-      "https://ethereum.publicnode.com"
+      "https://1rpc.io/eth",
+      "https://eth.drpc.org",
+      "https://eth.meowrpc.com"
+    ],
+    "contractAddress": "0xfceaaaeb8d564a9d0e71ef36f027b9d162bc334e"
+  },
+  "MATIC": {
+    "nodeUrlArray": [
+      "https://polygon-rpc.com",
+      "https://rpc.ankr.com/polygon",
+      "https://1rpc.io/matic",
+      "https://polygon.drpc.org",
+      "https://polygon.meowrpc.com",
+      "https://polygon-bor.publicnode.com"
+    ],
+    "contractAddress": "0x2216072a246a84f7b9ce0f1415dd239c9bf201ab"
+  },
+  "GLMR": {
+    "nodeUrlArray": [
+      "https://rpc.api.moonbeam.network",
+      "https://1rpc.io/glmr",
+      "https://rpc.ankr.com/moonbeam"
+    ],
+    "contractAddress": "0x6372aec6263aa93eacedc994d38aa9117b6b95b5"
+  },
+  "MOONBEAM": {
+    "nodeUrlArray": [
+      "https://moonriver.api.onfinality.io/public",
+      "https://moonriver.public.blastapi.io",
+      "https://moonriver-rpc.dwellir.com"
+    ],
+    "contractAddress": "0xde1ae3c465354f01189150f3836c7c15a1d6671d"
+  },
+  "WAN": {
+    "intervalTime": 2000,
+    "nodeUrlArray": [
+      "https://nodes.wandevs.org/wan"
+    ],
+    "contractAddress": "0xe85b0d89cbc670733d6a40a9450d8788be13da47"
+  },
+  "FTM": {
+    "nodeUrlArray": [
+      "https://rpc.ftm.tools",
+      "https://1rpc.io/ftm",
+      "https://rpc.ankr.com/fantom",
+      "https://rpc.fantom.gateway.fm",
+      "https://fantom.publicnode.com"
+    ],
+    "contractAddress": "0xccffe9d337f3c1b16bd271d109e691246fd69ee3"
+  },
+  "OPT": {
+    "intervalTime": 2000,
+    "nodeUrlArray": [
+      "https://optimism.publicnode.com",
+      "https://1rpc.io/op",
+      "https://rpc.ankr.com/optimism",
+      "https://rpc.optimism.gateway.fm",
+      "https://optimism.meowrpc.com",
+      "https://optimism.drpc.org"
+    ],
+    "contractAddress": "0xc6ae1db6c66d909f7bfeeeb24f9adb8620bf9dbf"
+  },
+  "XDC": {
+    "nodeUrlArray": [
+      "https://rpc.xinfin.network",
+      "https://rpc1.xinfin.network",
+      "https://erpc.xdcrpc.com"
+
+    ],
+    "contractAddress": "0xf7ba155556e2cd4dfe3fe26e506a14d2f4b97613"
+  },
+  "OKT": {
+    "range": 300,
+    "nodeUrlArray": [
+      "https://exchainrpc.okex.org",
+      "https://oktc-mainnet.public.blastapi.io"
+    ],
+    "contractAddress": "0xf7ba155556e2cd4dfe3fe26e506a14d2f4b97613"
+  },
+  "CLV": {
+    "nodeUrlArray": [
+      "https://api-para.clover.finance"
+    ],
+    "contractAddress": "0xf7ba155556e2cd4dfe3fe26e506a14d2f4b97613"
+  },
+  "FX": {
+    "nodeUrlArray": [
+      "https://fx-json-web3.functionx.io:8545",
+      "https://fx-json-web3.portfolio-x.xyz:8545"
+    ],
+    "contractAddress": "0xdf935552fac687123c642f589296762b632a9aaf"
+  },
+  "ZEN": {
+    "nodeUrlArray": [
+      "https://eon-rpc.horizenlabs.io/ethv1",
+      "https://rpc.ankr.com/horizen_eon"
+    ],
+    "contractAddress": "0x97e0883493e8bb7a119a1e36e53ee9e7a2d3ca7b"
+  },
+  "TLOS": {
+    "nodeUrlArray": [
+      "https://rpc1.eu.telos.net/evm",
+      "https://mainnet.telos.net/evm"
+    ],
+    "contractAddress": "0x201e5de97dfc46aace142b2009332c524c9d8d82"
+  },
+  "METIS": {
+    "nodeUrlArray": [
+      "https://andromeda.metis.io/?owner=1088",
+      "https://metis-mainnet.public.blastapi.io"
+    ],
+    "contractAddress": "0xc6ae1db6c66d909f7bfeeeb24f9adb8620bf9dbf"
+  },
+  "GTH": {
+    "nodeUrlArray": [
+      "https://mainnet.gather.network"
+    ],
+    "contractAddress": "0xc6ae1db6c66d909f7bfeeeb24f9adb8620bf9dbf"
+  },
+  "SGB": {
+    "range": 30,
+    "nodeUrlArray": [
+      "https://songbird-api.flare.network/ext/C/rpc",
+      "https://sgb.ftso.com.au/ext/bc/C/rpc"
     ],
     "contractAddress": "0xb8460Eeaa06Bc6668dad9fd42B661C0B96b3bE57"
   },
-  "ETH2": {
+  "ASTR": {
     "nodeUrlArray": [
-      "https://rpc.ankr.com/eth",
-      "https://endpoints.omniatech.io/v1/eth/mainnet/public",
-      "https://ethereum.publicnode.com"
+      "https://evm.astar.network",
+      "https://astar.public.blastapi.io",
+      "https://1rpc.io/astr"
     ],
-    "contractAddress": "0xb8460Eeaa06Bc6668dad9fd42B661C0B96b3bE57"
+    "contractAddress": "0x592de30bebff484b5a43a6e8e3ec1a814902e0b6"
   }
 }
