--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "web3": "^4.1.1"
   },
   "scripts": {
-    "start": "npm start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "npm test",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
