--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "web3": "^4.1.1"
   },
   "scripts": {
+    "dev": "BROWSER=none react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
